name:                enterpriseFizzBuzz
version:             0.1.0.0
synopsis:            FizzBuzz your numbers!
description:         Big data fizz buzz. Lots of numbers to Fizz & even some to Buzz... 
homepage:            https://github.com/JHawk/enterpriseFizzBuzz
license:             BSD3
license-file:        LICENSE
author:              Joshua Hawkins
maintainer:          josh.r.hawk@gmail.com
category:            Text

build-type:          Simple
cabal-version:       >=1.8

-- Using a project structure similar to
-- http://www.haskell.org/haskellwiki/Structure_of_a_Haskell_project
library
  build-depends:     base ==4.5.*
  hs-source-dirs:    src
  
  exposed-modules:   Enterprise.FizzBuzz

executable enterpriseFizzBuzz
  build-depends:     base ==4.5.*
  hs-source-dirs:    src

  main-is:           Main.hs
  
test-suite enterpriseUnit
  build-depends:     base ==4.5.*
                   , HUnit
                   , test-framework
                   , test-framework-hunit
                   , enterpriseFizzBuzz

  hs-source-dirs:    test-suite/unit

  type:              exitcode-stdio-1.0
  main-is:           Enterprise/FizzBuzzUnitTests.hs
 
benchmark enterpriseBench
  build-depends:     base ==4.5.*
                   , criterion
                   , enterpriseFizzBuzz

  hs-source-dirs:    bench

  type:              exitcode-stdio-1.0
  main-is:           Enterprise/FizzBuzzBenchmarks.hs
